GLAD-391: oppgrader Java til 21, Gradle til 9 og GitHub Actions (#7)
* GLAD-391: oppgrader Gradle fra 7.4.1 til 9.5.1

* GLAD-391: oppgrader Java fra 11 til 21

- Oppdaterer sourceCompatibility og targetCompatibility i build.gradle.kts
- Kildekodeendringer fra OpenRewrite (instanceof pattern matching, fjerner overflødige semikolon, osv.)
- Oppdaterer java-version i CI-workflows til 21

* GLAD-391: oppgrader GitHub Actions til nyeste versjoner

- actions/checkout: v3 -> v6.0.3
- actions/setup-java: v3 -> v5.2.0
- gradle/gradle-build-action: v3 -> v3.5.0

* GLAD-391: publish ved release med semver-validering

- publish.yml trigges nå på GitHub Release i stedet for push til main
- Første steg validerer at tagnavn er på formen x.y.z
- Versjonsnummer hentes fra release-taggen (-Pversion)
- build.gradle.kts bruker version-property, defaulter til 'main'
- README dokumenterer release-prosessen

---------

Co-authored-by: Copilot <copilot@github.com>